refatctor:changed english

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <ol>
         <p>About Me:</p>
         <li>I am 13 y.o</li>
-       <li>I learn english language</li>
+       <li>I learn English language</li>
        <li>I learn HTML and CSS</li>
       </ol>
     </div>
